--- a/package.json
+++ b/package.json
@@ -4,14 +4,19 @@
   "private": true,
   "scripts": {
     "start": "nodemon ./bin/www --trace-warnings",
-    "prod": "pm2 start bin/www",
+    "prod": "pm2 start bin/www"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^10.0.0",
     "express": "~4.16.1",
-    "morgan": "~1.9.1"
+    "express-fileupload": "^1.2.1",
+    "lodash": "^4.17.21",
+    "morgan": "^1.10.0",
+    "web3.storage": "^3.5.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
